fixed bugs Report interface Report pdf Report csv Report txt save report file